# functional-desgin-ppp

./: .gitignore  404.html  README.md  flake.nix  index.html  mkdocs.yml
.github/workflows/: tests.yml
app/haskell/part1/: CHANGELOG.md  functional-design-part1.cabal
app/haskell/part1/src/: FunctionComposition.hs  Immutability.hs  Polymorphism.hs
app/haskell/part1/test/: FunctionCompositionSpec.hs  ImmutabilitySpec.hs  PolymorphismSpec.hs  Spec.hs
app/haskell/part2/: CHANGELOG.md  functional-design-part2.cabal
app/haskell/part2/src/: DataValidation.hs  PropertyBasedTesting.hs  TddFunctional.hs
app/haskell/part2/test/: DataValidationSpec.hs  PropertyBasedTestingSpec.hs  Spec.hs  TddFunctionalSpec.hs
app/haskell/part3/: CHANGELOG.md  functional-design-part3.cabal
app/haskell/part3/src/: AdapterPattern.hs  CompositePattern.hs  DecoratorPattern.hs
app/haskell/part3/test/: AdapterPatternSpec.hs  CompositePatternSpec.hs  DecoratorPatternSpec.hs  Spec.hs
app/haskell/part5/: CHANGELOG.md  functional-design-part5.cabal
app/haskell/part5/src/: GossipingBusDrivers.hs  PayrollSystem.hs  VideoRentalSystem.hs
app/haskell/part5/test/: GossipingBusDriversSpec.hs  PayrollSystemSpec.hs  Spec.hs  VideoRentalSystemSpec.hs
app/haskell/part6/: CHANGELOG.md  cabal.project.local  functional-design-part6.cabal
app/haskell/part6/src/: ConcurrencySystem.hs  WatorSimulation.hs
app/haskell/part6/test/: ConcurrencySystemSpec.hs  Spec.hs  WatorSimulationSpec.hs
app/haskell/part7/: CHANGELOG.md  functional-design-part7.cabal
app/haskell/part7/src/: BestPractices.hs  OOtoFPMigration.hs  PatternInteractions.hs
app/haskell/part7/test/: BestPracticesSpec.hs  OOtoFPMigrationSpec.hs  PatternInteractionsSpec.hs  Spec.hs
clojure/: index.html
clojure/01-immutability-and-data-transformation/: index.html
clojure/02-function-composition/: index.html
clojure/03-polymorphism/: index.html
clojure/04-clojure-spec/: index.html
clojure/05-property-based-testing/: index.html
clojure/06-tdd-in-functional/: index.html
clojure/07-composite-pattern/: index.html
clojure/08-decorator-pattern/: index.html
clojure/09-adapter-pattern/: index.html
clojure/10-strategy-pattern/: index.html
clojure/11-command-pattern/: index.html
clojure/12-visitor-pattern/: index.html
clojure/13-abstract-factory-pattern/: index.html
clojure/14-abstract-server-pattern/: index.html
clojure/15-gossiping-bus-drivers/: index.html
clojure/16-payroll-system/: index.html
clojure/17-video-rental-system/: index.html
clojure/18-concurrency-system/: index.html
clojure/19-wator-simulation/: index.html
clojure/20-pattern-interactions/: index.html
clojure/21-best-practices/: index.html
clojure/22-oo-to-fp-migration/: index.html
docs/: instruction.md
docs/article/: index.md
docs/setup/: nix.md
elixir/: index.html
elixir/01-immutability-and-data-transformation/: index.html
elixir/02-function-composition/: index.html
elixir/03-polymorphism/: index.html
elixir/04-data-validation/: index.html
elixir/05-property-based-testing/: index.html
elixir/06-tdd-and-fp/: index.html
elixir/07-effects-and-pure-functions/: index.html
elixir/08-error-handling-strategies/: index.html
elixir/09-io-and-external-systems/: index.html
elixir/10-concurrency-patterns/: index.html
elixir/11-command-pattern/: index.html
elixir/12-visitor-pattern/: index.html
elixir/13-abstract-factory-pattern/: index.html
elixir/14-abstract-server-pattern/: index.html
elixir/15-gossiping-bus-drivers/: index.html
elixir/16-payroll-system/: index.html
elixir/17-video-rental-system/: index.html
elixir/18-concurrency-system/: index.html
elixir/19-wator-simulation/: index.html
elixir/20-pattern-interactions/: index.html
elixir/21-best-practices/: index.html
elixir/22-oo-to-fp-migration/: index.html
environments/clojure/: shell.nix
environments/elixir/: shell.nix
environments/fsharp/: shell.nix
environments/haskell/: shell.nix
environments/node/: shell.nix
environments/rust/: shell.nix
environments/scala/: shell.nix
fsharp/: index.html
fsharp/01-immutability-and-data-transformation/: index.html
fsharp/02-function-composition/: index.html
fsharp/03-polymorphism/: index.html
fsharp/04-data-validation/: index.html
fsharp/05-property-based-testing/: index.html
fsharp/06-tdd-functional/: index.html
fsharp/07-composite-pattern/: index.html
fsharp/08-decorator-pattern/: index.html
fsharp/09-adapter-pattern/: index.html
fsharp/10-strategy-pattern/: index.html
fsharp/11-command-pattern/: index.html
fsharp/12-visitor-pattern/: index.html
fsharp/13-abstract-factory-pattern/: index.html
fsharp/14-abstract-server-pattern/: index.html
fsharp/15-gossiping-bus-drivers/: index.html
fsharp/16-payroll-system/: index.html
fsharp/17-video-rental-system/: index.html
fsharp/18-concurrency-system/: index.html
fsharp/19-wator-simulation/: index.html
fsharp/20-pattern-interactions/: index.html
fsharp/21-best-practices/: index.html
fsharp/22-oo-to-fp-migration/: index.html
haskell/: index.html
haskell/01-immutability-and-data-transformation/: index.html
haskell/02-function-composition/: index.html
haskell/03-polymorphism/: index.html
haskell/04-data-validation/: index.html
haskell/05-property-based-testing/: index.html
haskell/06-tdd-functional/: index.html
haskell/07-composite-pattern/: index.html
haskell/08-decorator-pattern/: index.html
haskell/09-adapter-pattern/: index.html
haskell/10-strategy-pattern/: index.html
haskell/11-command-pattern/: index.html
haskell/12-visitor-pattern/: index.html
haskell/13-abstract-factory-pattern/: index.html
haskell/14-abstract-server-pattern/: index.html
haskell/15-gossiping-bus-drivers/: index.html
haskell/16-payroll-system/: index.html
haskell/17-video-rental-system/: index.html
haskell/18-concurrency-system/: index.html
haskell/19-wator-simulation/: index.html
rust/: index.html
rust/03-polymorphism/: index.html
scala/: index.html
search/: search_index.json
shells/: shell.nix
(+474 files in other folders)
